--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
         <img class="padlock" src="assets/FAVPNG_padlock-icon-design-download_Utn0kFdE.png" alt="padlock">
         
           Sign In
-      </button></a>
+      </button>
     </div>
   </header>
-  <body>
 
   <main>
     <!-- Form -->
@@ -43,28 +42,29 @@
       </div>
       <fieldset>
         <label for="emailform">Email address<br>
-          <input class="emailform input-size" type="email" name="email">
+          <input class="emailform input-size" id="emailform" type="email" name="email">
         </label><br>
         <label for="phoneform">Phone (recommended)<br>
-          <input class="phoneform input-size" type="number" name="phone">
-          <p class="inputtext">
+          <input class="phoneform input-size" id="phoneform" type="number" name="phone">
+          </label><p class="inputtext">
             Standard call, messaging or data rates may apply.
           </p>
-        </label><br>
+        <br>
         <label for="passwordform">Password<br>
-          <input class="passwordform input-size" type="password" name="password">
-        </label><br>      
-        <div class="account-btn">
+          <input class="passwordform input-size" id="passwordform" type="password" name="password">
+        </label>
+            
+        <div class="account-btn"><br>
           <button class="account-btn input-size" type="submit">
             <img class="padlock" src="assets/FAVPNG_padlock-icon-design-download_Utn0kFdE.png" alt="padlock">
           Create Account</button>
-            </fieldset>
+        </div>
+      </fieldset>
       <div class="form-end">
         <p>By clicking Create account, you agree to our
           <a href="#">Terms</a> and have read and acknowledge our  <a href="#">Privacy Statement</a>.</p>
-        </div>
-          </p>
-        </div>
+        </p>
+      </div>
 
     </form>
  <div class="formfooter form">
@@ -92,6 +92,4 @@ Terms and conditions, features, support, pricing, and service options subject to
     </p>
 
   </footer>
-  
-</body>
 </html>
