fixed HTML linters errors

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <p> One account for everything Intuit, including Mint.</p>
         <a href="#">Learn more</a>
       </div>
+      
       <fieldset>
         <label for="emailform">Email address<br>
           <input class="emailform input-size" id="emailform" type="email" name="email">
@@ -60,16 +61,17 @@
           Create Account</button>
         </div>
       </fieldset>
+
       <div class="form-end">
         <p>By clicking Create account, you agree to our
           <a href="#">Terms</a> and have read and acknowledge our  <a href="#">Privacy Statement</a>.</p>
-        </p>
       </div>
-
     </form>
- <div class="formfooter form">
+
+    <div class="formfooter form">
           <p class="inputtext">
             Invisible reCAPTCHA by Google <a href="#">Privacy Policy</a> and <a href="#">Terms of Use</a>.</p>
+    </div>
   </main>
 
   <section>
