changed button img and border color

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="signin-btn">  
       <button class="submit" type="submit" onclick="window.location.href='https://accounts.intuit.com/index.html?offering_id=Intuit.ifs.mint&namespace_id=50000026&redirect_url=https%3A%2F%2Fmint.intuit.com%2Foverview.event%3Ftask%3DS'">
-        <img class="padlock" src="assets/FAVPNG_padlock-icon-design-download_Utn0kFdE.png" alt="padlock">
+        <img class="padlock" src="assets/whitepadlock.PNG" alt="padlock">
         
           Sign In
       </button>
@@ -46,7 +46,7 @@
           <input class="emailform input-size" id="emailform" type="email" name="email">
         </label><br>
         <label for="phoneform">Phone (recommended)<br>
-          <input class="phoneform input-size" id="phoneform" type="number" name="phone">
+          <input class="phoneform input-size" id="phoneform" type="tel" name="phone">
           </label><p class="inputtext">
             Standard call, messaging or data rates may apply.
           </p>
@@ -57,7 +57,7 @@
             
         <div class="account-btn"><br>
           <button class="account-btn input-size" type="submit">
-            <img class="padlock" src="assets/FAVPNG_padlock-icon-design-download_Utn0kFdE.png" alt="padlock">
+            <img class="padlock" src="assets/whitepadlock.PNG" alt="padlock">
           Create Account</button>
         </div>
       </fieldset>
