made the changes as per the codereview result

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <form class="form">
       <div class="textform">
         <h1> Create an Intuit account</h1>
-        <p> One account for everything Intuit, including Mint.</p>
-        <a href="#">Learn more</a>
+        <p> One account for everything Intuit.
+        <a href="#">Learn more</a></p>
       </div>
       
       <fieldset>
