changes in CSS to style page better

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </form>
 
     <div class="formfooter form">
-          <p class="inputtext">
+          <p class="inputtext2">
             Invisible reCAPTCHA by Google <a href="#">Privacy Policy</a> and <a href="#">Terms of Use</a>.</p>
     </div>
   </main>
